--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hydrogen-storefront",
+  "name": "justmeat-hydrogen",
   "private": true,
   "sideEffects": false,
   "version": "1.0.4",
@@ -29,6 +29,8 @@
     "@remix-run/eslint-config": "^2.6.0",
     "@shopify/oxygen-workers-types": "^4.0.0",
     "@shopify/prettier-config": "^1.1.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@total-typescript/ts-reset": "^0.4.2",
     "@types/eslint": "^8.4.10",
     "@types/react": "^18.2.22",
@@ -39,6 +41,7 @@
     "postcss-import": "^15.1.0",
     "postcss-preset-env": "^8.2.0",
     "prettier": "^2.8.4",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5.2.2"
   },
   "engines": {
