--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
+    "@material-tailwind/html": "^2.2.2",
     "@remix-run/react": "^2.6.0",
     "@remix-run/server-runtime": "^2.6.0",
     "@shopify/cli": "3.52.0",
