--- a/package.json
+++ b/package.json
@@ -25,7 +25,14 @@
     "isbot": "^3.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swiper": "^11.0.7"
+    "swiper": "^11.0.7",
+    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "pure-react-carousel": "^1.30.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.6.0",
