--- a/.shopify/project.json
+++ b/.shopify/project.json
@@ -1,1 +1,1 @@
-{"shop":"just-meats-sandbox.myshopify.com","shopName":"Just Meats SANDBOX","email":"codelock2021@gmail.com","storefront":{"id":"gid://shopify/HydrogenStorefront/1000014992","title":"justmeats-hydrogen"}}
+{"shop":"just-meats-sandbox.myshopify.com","shopName":"Just Meats SANDBOX","email":"15thfrank@gmail.com","storefront":{"id":"gid://shopify/HydrogenStorefront/1000014992","title":"justmeats-hydrogen"}}
