--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier": "prettier --write \"./app/**/*.{js,jsx,html,md}\""
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@material-tailwind/html": "^2.2.2",
     "@material-tailwind/react": "^2.1.9",
     "@radix-ui/react-dialog": "^1.0.5",
