--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swiper": "^11.0.7"
+    "swiper": "^11.0.7",
+    "buffer-polyfill": "npm:buffer@^6.0.3"
+
   },
   "devDependencies": {
     "@remix-run/dev": "^2.6.0",
