--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.2"
   },
