--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
+    "react-player": "^2.15.1",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.2"
   },
