--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@shopify/cli-hydrogen": "^7.1.0",
     "@shopify/hydrogen": "~2024.1.2",
     "@shopify/remix-oxygen": "^2.0.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "buffer-polyfill": "npm:buffer@^6.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
