--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.2"
   },
