--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@remix-run/server-runtime": "^2.6.0",
     "@shopify/cli": "3.52.0",
     "@shopify/cli-hydrogen": "^7.1.0",
-    "@shopify/hydrogen": "~2024.1.2",
+    "@shopify/hydrogen": "^2024.4.0",
     "@shopify/remix-oxygen": "^2.0.3",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "buffer-polyfill": "npm:buffer@^6.0.3",
