--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.2",
     "react-slick": "^0.30.2",
+    "remix-utils": "^7.6.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.2"
