--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "graphql-tag": "^2.12.6",
     "isbot": "^3.6.6",
     "lucide-react": "^0.363.0",
+    "phone": "^3.1.43",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
