--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
-    "@material-tailwind/html": "^2.2.2",
     "@material-tailwind/react": "^2.1.9",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@rechargeapps/storefront-client": "^1.18.0",
