add: static filter menus

--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@material-tailwind/react": "^2.1.9",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@rechargeapps/storefront-client": "^1.18.0",
     "@remix-run/react": "^2.6.0",
