--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@rechargeapps/storefront-client": "^1.18.2",
     "@remix-run/react": "^2.6.0",
     "@remix-run/server-runtime": "^2.6.0",
