--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.2",
     "react-otp-input": "^3.1.1",
+    "react-responsive": "^10.0.0",
     "react-slick": "^0.30.2",
     "remix-utils": "^7.6.0",
     "slick-carousel": "^1.8.1",
