--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.2",
+    "react-markdown": "^9.0.1",
     "react-otp-input": "^3.1.1",
     "react-responsive": "^10.0.0",
     "react-slick": "^0.30.2",
+    "rehype-raw": "^7.0.0",
     "remix-utils": "^7.6.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.7",
