--- a/package.json
+++ b/package.json
@@ -1,84 +1,84 @@
 {
-  "name": "justmeat-hydrogen",
+  "name": "justmeats-hydrogen-v2",
   "private": true,
   "sideEffects": false,
-  "version": "1.0.4",
+  "version": "2024.4.7",
+  "type": "module",
   "scripts": {
-    "build": "shopify hydrogen build",
+    "build": "shopify hydrogen build --codegen",
     "dev": "shopify hydrogen dev --codegen",
-    "preview": "npm run build && shopify hydrogen preview",
+    "preview": "shopify hydrogen preview --build",
     "lint": "eslint --no-error-on-unmatched-pattern --ext .js,.ts,.jsx,.tsx .",
     "codegen": "shopify hydrogen codegen",
     "prettier": "prettier --write \"./app/**/*.{js,jsx,html,md}\""
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
+    "@headlessui/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.9",
     "@radix-ui/colors": "^3.0.0",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@rechargeapps/storefront-client": "^1.18.2",
-    "@remix-run/react": "^2.6.0",
-    "@remix-run/server-runtime": "^2.6.0",
-    "@shopify/cli": "3.52.0",
-    "@shopify/cli-hydrogen": "^7.1.0",
-    "@shopify/hydrogen": "^2024.4.0",
-    "@shopify/remix-oxygen": "^2.0.3",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "buffer-polyfill": "npm:buffer@^6.0.3",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@rechargeapps/storefront-client": "^1.19.0",
+    "@remix-run/react": "^2.10.2",
+    "@remix-run/server-runtime": "^2.10.2",
+    "@shopify/cli": "3.60.0",
+    "@shopify/cli-hydrogen": "^8.1.1",
+    "@shopify/hydrogen": "2024.4.5",
+    "@shopify/remix-oxygen": "^2.0.4",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
-    "isbot": "^3.6.6",
-    "lucide-react": "^0.363.0",
-    "phone": "^3.1.43",
+    "isbot": "^3.8.0",
+    "lucide-react": "^0.400.0",
+    "phone": "^3.1.48",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.6.4",
-    "react-hook-form": "^7.51.2",
-    "react-markdown": "^9.0.1",
+    "react-fast-marquee": "^1.6.5",
+    "react-hook-form": "^7.52.1",
     "react-otp-input": "^3.1.1",
     "react-responsive": "^10.0.0",
     "react-slick": "^0.30.2",
-    "rehype-raw": "^7.0.0",
     "remix-utils": "^7.6.0",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.0.7",
-    "tailwind-merge": "^2.2.2"
+    "swiper": "^11.1.4",
+    "tailwind-merge": "^2.3.0",
+    "react-markdown": "^9.0.1",
+    "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.6.0",
-    "@remix-run/eslint-config": "^2.6.0",
-    "@shopify/oxygen-workers-types": "^4.0.0",
+    "@graphql-codegen/cli": "5.0.2",
+    "@remix-run/dev": "^2.9.2",
+    "@remix-run/eslint-config": "^2.9.2",
+    "@shopify/hydrogen-codegen": "^0.3.1",
+    "@shopify/mini-oxygen": "^3.0.3",
     "@shopify/prettier-config": "^1.1.2",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9",
+    "@shopify/oxygen-workers-types": "^4.0.0",
     "@total-typescript/ts-reset": "^0.4.2",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/eslint": "^8.4.10",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.20.0",
     "eslint-plugin-hydrogen": "0.12.2",
-    "postcss": "^8.4.21",
-    "postcss-import": "^15.1.0",
-    "postcss-preset-env": "^8.2.0",
     "prettier": "^2.8.4",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.2.2"
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.0",
+    "vite-tsconfig-paths": "^4.3.1"
   },
   "engines": {
     "node": ">=18.0.0"
-  },
-  "browserslist": [
-    "defaults"
-  ]
+  }
 }
