--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
     "hydrogen/prefer-image-component": "off",
     "no-useless-escape": "off",
     "no-case-declarations": "off",
-    "no-unused-vars": "off",
+    "no-unused-vars": "warn",
     "prettier/prettier": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "off",
