--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "justmeats-hydrogen-v2",
+  "name": "justmeats-hydrogen",
   "private": true,
   "sideEffects": false,
-  "version": "2024.7.1",
+  "version": "2024.10.1",
   "type": "module",
   "scripts": {
     "build": "shopify hydrogen build --codegen",
@@ -25,17 +25,16 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@rechargeapps/storefront-client": "^1.25.0",
-    "@remix-run/react": "^2.10.1",
-    "@remix-run/server-runtime": "^2.10.1",
-    "@shopify/cli": "^3.63.2",
-    "@shopify/cli-hydrogen": "^8.1.1",
-    "@shopify/hydrogen": "^2024.7.1",
-    "@shopify/remix-oxygen": "^2.0.5",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.13",
+    "@remix-run/react": "^2.13.1",
+    "@remix-run/server-runtime": "^2.13.1",
+    "@shopify/hydrogen": "2024.10.0",
+    "@shopify/remix-oxygen": "^2.0.9",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "form-data": "^4.0.1",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^3.8.0",
@@ -54,26 +53,26 @@
     "remix-utils": "^7.6.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.4",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
-    "@remix-run/dev": "^2.10.1",
-    "@remix-run/eslint-config": "^2.10.1",
-    "@shopify/hydrogen-codegen": "^0.3.1",
-    "@shopify/mini-oxygen": "^3.0.3",
+    "@remix-run/dev": "^2.13.1",
+    "@remix-run/eslint-config": "^2.13.1",
+    "@shopify/cli": "~3.69.4",
+    "@shopify/hydrogen-codegen": "^0.3.2",
+    "@shopify/mini-oxygen": "^3.1.0",
     "@shopify/oxygen-workers-types": "^4.1.2",
     "@shopify/prettier-config": "^1.1.2",
+    "@tailwindcss/vite": "4.0.0-beta.2",
     "@total-typescript/ts-reset": "^0.4.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/eslint": "^8.4.10",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
-    "autoprefixer": "^10.4.19",
     "eslint": "^8.20.0",
     "eslint-plugin-hydrogen": "0.12.2",
-    "prettier": "^2.8.4",
-    "tailwindcss": "^3.4.4",
+    "prettier": "^2.8.8",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.3.1"
